--- a/hugo.toml
+++ b/hugo.toml
@@ -1,3 +1,3 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://mikeovu.github.io/Mike-Portfolio-Site/'
 languageCode = 'en-us'
 title = 'My New Hugo Site'
